--- a/src/routes/scss/_section__3.scss
+++ b/src/routes/scss/_section__3.scss
@@ -52,7 +52,7 @@
                     color: white;
                     box-sizing: border-box;
                     aspect-ratio: 4.5;
-                    padding: .9rem;
+                    padding: 0;
                 }
 
                 p {
