Quick fix: changed button.fill-hover::after selector style rule to have no border to avoid iOS default styles.

--- a/src/routes/scss/_hover-animations.scss
+++ b/src/routes/scss/_hover-animations.scss
@@ -17,7 +17,8 @@ button.fill-hover {
         height: 100%;
         mix-blend-mode: difference;
         background-color: white;
-
+        border: none;
+        
         // use clip-path for animation as mix-blend-mode breaks transform: translateX
         clip-path: inset(0 100% 0 0);
         transition: clip-path 250ms ease-in;
