--- a/src/routes/scss/_section__1.scss
+++ b/src/routes/scss/_section__1.scss
@@ -26,7 +26,7 @@
 
     &__container {
         display: flex;
-        height: 75%;
+        height: 65vh;
         justify-content: center;
         flex-direction: column;
         text-align: center;
