--- a/src/routes/scss/_section__3.scss
+++ b/src/routes/scss/_section__3.scss
@@ -66,7 +66,10 @@
             margin: 5% 25%;
             
             display: flex;
+
             @media (max-width: 650px) {
+                background: url("/man-running-in-forest-darken.jpg") no-repeat center center;
+                background-size: cover;
                 flex-direction: column;
                 width: 95%;
                 margin-inline: 0;
