Quick fix: Updated _hover-animations.scss @supports rule to match new button transition method

--- a/src/routes/scss/_hover-animations.scss
+++ b/src/routes/scss/_hover-animations.scss
@@ -36,7 +36,7 @@ button.fill-hover {
             color: black;
 
             &::after {
-                clip-path: inset(0 100% 0 0);
+                transform: translateX(0);
             }
         }
     }
