+ Lazy loading. + Section 4

--- a/src/routes/scss/_section__1.scss
+++ b/src/routes/scss/_section__1.scss
@@ -2,7 +2,7 @@
     min-height: 50%;
     width: 100%;
     height: fit-content;
-    background-image: url("/camping-night.jpg");
+    background-image: url("/low-quality/camping-night.png");
     background-size: cover;
     aspect-ratio: 1.59;
     box-sizing: border-box;
