--- a/src/routes/scss/_section__3.scss
+++ b/src/routes/scss/_section__3.scss
@@ -63,19 +63,30 @@
 
         &__2 {
             background-color: #1b171a;
+            $background-color: #1b171a;
+
+            filter: drop-shadow(50px 50px 10px #1b171a6b);
+
             margin: 5% 25%;
             
             display: flex;
 
             @media (max-width: 650px) {
-                background: url("/man-running-in-forest-darken.jpg") no-repeat center center;
+                
                 background-size: cover;
                 flex-direction: column;
                 width: 95%;
                 margin-inline: 0;
+                position: relative;
 
                 &__img {
-                    display: none;
+                    position: absolute;
+                    filter: brightness(25%);
+                    top: 0;
+                    left: 0;
+                    width: 100% !important;
+                    height: 100% !important;
+                    z-index: -1;
                 }
 
                 &__quote {
@@ -95,7 +106,7 @@
             
             &__img {
                 width: 50%;
-                background: url("/man-running-in-forest.jpg") no-repeat center center;
+                background: url("/low-quality/man-running-in-forest.png") no-repeat center center;
                 background-size: cover;
             }
 
@@ -127,6 +138,8 @@
         }
     }
 
+    $background-color: #282428;
+
     &__divider {
         width: 100%;
     }
@@ -134,11 +147,12 @@
     &::after {
         position: absolute;
         left: 0;
-        bottom: -25%;
+        bottom: -50%;
         content: "";
-        height: 25%;
+        height: 50%;
         width: 100%;
-        background: linear-gradient($background-color, transparent);
+        background: linear-gradient($background-color 40%, transparent);
         pointer-events: none;
+        z-index: 1;
     }
 }
