--- a/src/routes/scss/_section__3.scss
+++ b/src/routes/scss/_section__3.scss
@@ -72,7 +72,7 @@
             display: flex;
 
             @media (max-width: 650px) {
-                
+                filter: none;
                 background-size: cover;
                 flex-direction: column;
                 width: 95%;
