--- a/src/routes/scss/_section__3.scss
+++ b/src/routes/scss/_section__3.scss
@@ -72,7 +72,7 @@
             display: flex;
 
             @media (max-width: 650px) {
-                filter: none;
+                filter: drop-shadow(0 0 0 rgba(27, 23, 26, 0));
                 background-size: cover;
                 flex-direction: column;
                 width: 95%;
